Refactor GitHub search API to use POST method with request body; add DTOs for search request and response